# python_rm_duplicates

./: .gitignore  README.md  pyproject.toml  requirements.txt  rm_duplicates.py  setup.cfg  test.py
remove_duplicates/: __init__.py  args.py  identify.py  main.py  progress.py  remove.py  validate_paths.py  verbosity.py
remove_duplicates/modules/: __init__.py  args.py  identify.py  progress.py  remove.py  validate_paths.py  verbosity.py
remove_duplicates/tests/: __init__.py  args.py  fixtures.py  identify.py  progress.py  remove.py  validate_paths.py
