[metadata]
name = remove-duplicates
version = 1.3.1
author = Jordan Slaman
author_email = jordan.slaman@gmail.com
url = https://github.com/JordanSlaman/python_rm_duplicates
description = This is a pure python script to remove files from one or more directories.
long_description = file: README.md


[options]
;include_package_data = true
packages = remove-duplicates
python_requires = >=3.9

[options.entry_points]
console_scripts = remove-duplicates = remove-duplicates.main:main





;license = BSD-3-Clause  # Example license
;classifiers =
;    Environment :: Web Environment
;    Framework :: Django
;    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
;    Intended Audience :: Developers
;    License :: OSI Approved :: BSD License
;    Operating System :: OS Independent
;    Programming Language :: Python
;    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3 :: Only
;    Programming Language :: Python :: 3.8
;    Programming Language :: Python :: 3.9
;    Topic :: Internet :: WWW/HTTP
;    Topic :: Internet :: WWW/HTTP :: Dynamic Content

